Since there are many that depend on requests, there are many skipped
tests.  That should be resolved either monkeypatching or learning
how to test requests properly (ideally).

*****

Added skip pytest marks in latex and pdflatex functions
(while I figure out whether these commands are testable or not).

*****

Upped required prompt_toolkit requirement to version 2.0.7
since it was failing (locally) during Linux py3.6 testings.

*****

Updated docs.

*****

Bumped bibmanager version to 1.0.0.
This next merge closes #6
And completes the tasks for first release (exclamation mark)


*****  Do 7. Feb 17:56:15 CET 2019  *****

Added tests that involve the requets package using requests_mock.
Added requests_mock to tests_requires in setup.py.

*****

Updated purify() to include case when special characters are followed
by braces.

*****

Updated docs.


*****  Sat Apr  6 18:24:53 CEST 2019  *****

Tweaked entries screen output spacing for better clarity.

*****

Updated screen output of ADS URLs.

*****

Added long_description to setup.py.

*****

Bumped bibmanager version to 1.0.1.

*****

Added PyPi shield to README.md, index.rst, and setup.py.
Added travis and license shields to index.rst and setup.py.

*****

Added DOI shield to index.rst and setup.py
Added license shield to README.md
Updated DOI shield in README.md

*****

Bumped bibmanager version to 1.0.2.


*****  Sun Apr  7 14:12:54 CEST 2019  *****

Refactored cli_search() to read user inputs from prompt_toolkit.promt
rather than CLAs.  This mimics a search in ADS.  This changes the
behavior for the user.

Updated mock_prompt() fixture to handle input arguments as keywords
(makes it more flexible).
Updated docs and tests accordingly.

*****

Catch no user-input case for bibm search.
Added test.

*****

Added tests for different command-line search scenarios.
Minor tweaks to the docs.


*****  Thu Apr 11 22:23:35 CEST 2019  *****

Added tests for am.manager() function.
Added more entries for reqs decorator.
